# TokenSmith

./: .gitignore  README.md  docs-requirements.txt  export_example.py  manager.py  mkdocs.yml  pyproject.toml  serve-docs.sh  setup.py  utils.py
.github/workflows/: docs.yml
artifacts/: README.md  data_tokenized_text_document.idx  demo.ipynb  prep_for_tokengram.ipynb  prepare_dataset.ipynb  tokenize.sh  tokensmith_showcase.ipynb
artifacts/Export/: specific_sequences.jsonl
artifacts/streamlit_app/: inspect.py  search.py  webapp.py
benchmarking/: plot.ipynb  prepare_data.ipynb
benchmarking/logs/: edit_time_across_num_docs_logs.json  edit_time_across_num_samples_log.json  inspect_time_across_num_docs_logs.json  inspect_time_across_num_samples_log.json
demo/: main.ipynb
docs/: index.md
docs/reference/: edit.md  export.md  ingest.md  inspect.md  manager.md  sample.md  search.md  ui.md  utils.md
docs/tutorials/: 01_basic_setup.ipynb  02_inspect_samples.ipynb  02_inspect_samples.md  03_sampling_methods.ipynb  04_dataset_editing_methods.ipynb  05_search_functionality.ipynb  README.md
edit/: handler.py
export/: handler.py
exports/: README.md  exported_data.jsonl
inspect/: handler.py
sample/: handler.py
search/: handler.py
tokensmith/: __init__.py  manager.py  megatron_dependencies.py  utils.py
tokensmith/edit/: __init__.py  handler.py  old_handler.py
tokensmith/export/: __init__.py  handler.py
tokensmith/import/: __init__.py  handler.py
tokensmith/ingest/: __init__.py  handler.py
tutorials/: 01_basic_setup.ipynb  README.md
(+12 files in other folders)
